# factor_store

./: .gitignore  README.md  pyproject.toml  setup.py
examples/: demo.py
factorstore/: __init__.py  core.py  dominant.py  utils.py
tests/: conftest.py  test_core.py  test_dominant.py  test_utils.py
