[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "factorstore"
version = "0.1.0"
description = "轻量级多频率因子 Parquet 存储与查询引擎"
requires-python = ">=3.10"
dependencies = [
    "polars>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "hypothesis>=6.100",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
